# soldebug

./: .gitmodules  CHANGELOG.md  CLA.md  Cargo.toml  NOTICE  README.md  ci-local.sh  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/soldebug/: Cargo.toml
crates/soldebug-core/: Cargo.toml
crates/soldebug-core/src/: decode.rs  lib.rs  replay.rs  source.rs  types.rs
crates/soldebug-output/: Cargo.toml
crates/soldebug-output/src/: json_fmt.rs  lib.rs  trace_fmt.rs
crates/soldebug/src/: cli.rs  main.rs
soldebugup/: install
