[workspace]
members = [
    "crates/soldebug",
    "crates/soldebug-core",
    "crates/soldebug-output",
]
resolver = "2"

[workspace.package]
version = "1.6.0"
edition = "2024"
rust-version = "1.89"
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://getfoundry.sh"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[workspace.lints.clippy]
dbg_macro = "warn"
uninlined_format_args = "warn"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unused_must_use = "deny"

# Foundry path dependencies (from local checkout)
[workspace.dependencies]
foundry-common = { path = "lib/foundry/crates/common" }
foundry-common-fmt = { path = "lib/foundry/crates/common/fmt" }
foundry-config = { path = "lib/foundry/crates/config" }
foundry-evm-abi = { path = "lib/foundry/crates/evm/abi" }
foundry-evm-core = { path = "lib/foundry/crates/evm/core" }
foundry-evm-hardforks = { path = "lib/foundry/crates/evm/hardforks" }
foundry-evm-networks = { path = "lib/foundry/crates/evm/networks" }
foundry-evm-traces = { path = "lib/foundry/crates/evm/traces" }
foundry-linking = { path = "lib/foundry/crates/linking" }
foundry-macros = { path = "lib/foundry/crates/macros" }
foundry-primitives = { path = "lib/foundry/crates/primitives" }
foundry-cheatcodes = { path = "lib/foundry/crates/cheatcodes" }
foundry-cheatcodes-spec = { path = "lib/foundry/crates/cheatcodes/spec" }
foundry-evm = { path = "lib/foundry/crates/evm/evm" }
foundry-evm-coverage = { path = "lib/foundry/crates/evm/coverage" }
foundry-evm-fuzz = { path = "lib/foundry/crates/evm/fuzz" }
foundry-wallets = { path = "lib/foundry/crates/wallets" }
forge-script-sequence = { path = "lib/foundry/crates/script-sequence" }
forge-verify = { path = "lib/foundry/crates/verify" }

# Crates.io deps (matching foundry's pinned versions)
foundry-block-explorers = { version = "0.22.0", default-features = false }
foundry-compilers = { version = "0.19.14", default-features = false, features = [
    "rustls",
    "svm-solc",
] }
foundry-fork-db = "0.24.1"

## alloy
alloy-consensus = { version = "2.0.0-rc.0", default-features = false }
alloy-chains = { version = "0.2", features = ["serde"] }
alloy-dyn-abi = "1.5.2"
alloy-eips = { version = "2.0.0-rc.0", default-features = false }
alloy-evm = "0.29.2"
alloy-genesis = { version = "2.0.0-rc.0", default-features = false }
alloy-hardforks = { version = "0.4.7", default-features = false }
alloy-json-abi = "1.5.2"
alloy-json-rpc = { version = "2.0.0-rc.0", default-features = false }
alloy-network = { version = "2.0.0-rc.0", default-features = false }
alloy-op-hardforks = { version = "0.4.7", default-features = false }
alloy-primitives = { version = "1.5.2", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
] }
alloy-provider = { version = "2.0.0-rc.0", default-features = false }
alloy-pubsub = { version = "2.0.0-rc.0", default-features = false }
alloy-rlp = "0.3"
alloy-rpc-client = { version = "2.0.0-rc.0", default-features = false }
alloy-rpc-types = { version = "2.0.0-rc.0", default-features = true }
alloy-rpc-types-eth = { version = "2.0.0-rc.0", default-features = false }
alloy-serde = { version = "2.0.0-rc.0", default-features = false }
alloy-signer = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-local = { version = "2.0.0-rc.0", default-features = false }
alloy-ens = { version = "2.0.0-rc.0", default-features = false }
alloy-sol-types = "1.5.2"
alloy-sol-macro-expander = "1.5.2"
alloy-sol-macro-input = "1.5.2"
alloy-transport = { version = "2.0.0-rc.0", default-features = false }
alloy-transport-http = { version = "2.0.0-rc.0", default-features = false }
alloy-transport-ipc = { version = "2.0.0-rc.0", default-features = false }
alloy-transport-ws = { version = "2.0.0-rc.0", default-features = false }

## op-alloy
op-alloy-consensus = "0.24.0"
op-alloy-network = "0.24.0"
op-alloy-rpc-types = "0.24.0"

## alloy-evm
alloy-op-evm = "0.26.3"

## revm
revm = { version = "36.0.0", default-features = false }
revm-inspectors = { version = "0.36.0", features = ["serde"] }
op-revm = { version = "17.0.0", default-features = false }

## solar
solar = { package = "solar-compiler", version = "=0.1.8", default-features = false }

## solang
solang-parser = { version = "=0.3.9", package = "foundry-solang-parser" }

## svm
svm = { package = "svm-rs", version = "0.5", default-features = false, features = ["rustls"] }

## tempo
tempo-chainspec = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false, features = ["serde"] }
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false }
tempo-evm = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false }
tempo-revm = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false }
tempo-contracts = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0" }
tempo-precompiles = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0" }

## soldeer
soldeer-core = { version = "=0.10.0", features = ["serde"] }

## Deps referenced by foundry crates via workspace = true
## We must provide them all even if we don't use them directly
alloy-contract = { version = "2.0.0-rc.0", default-features = false }
alloy-eip5792 = { version = "2.0.0-rc.0", default-features = false }
alloy-rpc-types-beacon = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-aws = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-gcp = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-ledger = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-trezor = { version = "2.0.0-rc.0", default-features = false }
alloy-signer-turnkey = { version = "2.0.0-rc.0", default-features = false }
alloy-trie = "0.9"
axum = "0.8"
bytes = "1.11"
color-eyre = "0.6"
hyper = "1.8"
mimalloc = "0.1"
op-alloy-flz = "0.13.1"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
rand_08 = { package = "rand", version = "0.8" }
rustls = "0.23"
similar-asserts = "1.7"
snapbox = { version = "0.6", features = ["json", "regex", "term-svg"] }
soldeer-commands = "=0.10.0"
tikv-jemallocator = "0.6"
tower-http = "0.6"
vergen = { package = "vergen-gitcl", version = "10.0.0-beta.5", default-features = false, features = ["build", "cargo"] }
jsonpath_lib = "0.3"
evm-disassembler = "0.6"
evmole = "0.8"
ethereum_ssz = "0.10"
idna_adapter = "=1.1.0"

## Path deps for foundry binaries/crates needed transitively
anvil = { path = "lib/foundry/crates/anvil" }
cast = { path = "lib/foundry/crates/cast" }
chisel = { path = "lib/foundry/crates/chisel" }
forge = { path = "lib/foundry/crates/forge" }
forge-doc = { path = "lib/foundry/crates/doc" }
forge-fmt = { path = "lib/foundry/crates/fmt" }
forge-lint = { path = "lib/foundry/crates/lint" }
forge-sol-macro-gen = { path = "lib/foundry/crates/sol-macro-gen" }
forge-script = { path = "lib/foundry/crates/script" }
foundry-cli = { path = "lib/foundry/crates/cli" }
foundry-cli-markdown = { path = "lib/foundry/crates/cli-markdown" }
foundry-debugger = { path = "lib/foundry/crates/debugger" }
foundry-test-utils = { path = "lib/foundry/crates/test-utils" }

clap_complete = "4"
clap_complete_nushell = "4"

## misc
base64 = "0.22"
dialoguer = { version = "0.12", default-features = false, features = ["password"] }
k256 = "0.13"
proptest = "1.9.0"
rand = "0.9"
indicatif = "0.18"
strum = "0.27"
async-trait = "0.1"
auto_impl = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2.1", features = ["full"] }
dirs = "6"
dunce = "1"
eyre = "0.6"
figment = { package = "figment2", version = "0.11" }
futures = { version = "0.3", default-features = false }
itertools = "0.14"
memchr = "2.7"
parking_lot = "0.12"
rayon = "1"
regex = { version = "1", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tempfile = "3.23"
thiserror = "2"
tokio = "1"
toml = "0.9"
toml_edit = "0.24"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
walkdir = "2"
yansi = { version = "1.0", features = ["detect-tty", "detect-env"] }
heck = "0.5"
path-slash = "0.2"
mesc = "0.3"
uuid = "1.19.0"
flate2 = "1.1"
anstream = "0.6"
anstyle = "1.0"
ciborium = "0.2"
num-format = "0.4"
comfy-table = "7"
jiff = { version = "0.2", default-features = false, features = ["std", "perf-inline"] }

# Build profiles
[profile.dev]
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
panic = "abort"

# Speed up dev build for hot crates
[profile.dev.package]
foundry-compilers-artifacts-solc.opt-level = 3
foundry-compilers-core.opt-level = 3
foundry-compilers.opt-level = 3
serde_json.opt-level = 3
serde.opt-level = 3
solar-compiler.opt-level = 3
solar-parse.opt-level = 3
revm.opt-level = 3
revm-interpreter.opt-level = 3
revm-inspectors.opt-level = 3
alloy-primitives.opt-level = 3

# ============================================================================
# [patch.crates-io] - MUST replicate foundry's patches for path deps to resolve
# ============================================================================
[patch.crates-io]

## alloy (pinned to specific git rev)
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-eip5792 = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-ens = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-turnkey = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }

## alloy-evm
alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "alloy-2.0" }

## op-alloy / alloy-op-evm
op-alloy-consensus = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy-network = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy-rpc-types = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-evm = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-hardforks = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }

## revm
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "alloy-2.0" }

## foundry-fork-db
foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", branch = "main" }

## solar
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
