[package]
name = "soldebug-core"
description = "Core library for Solidity transaction debugging"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
# Foundry crates
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-config.workspace = true
foundry-evm.workspace = true
foundry-evm-core.workspace = true
foundry-evm-traces.workspace = true
foundry-linking.workspace = true
foundry-block-explorers.workspace = true

# Alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-evm.workspace = true
alloy-json-abi.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types.workspace = true
alloy-transport-http = { workspace = true, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }

# Revm
revm = { workspace = true, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "c-kzg",
] }
revm-inspectors.workspace = true

# Misc
eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
walkdir.workspace = true
semver.workspace = true
yansi.workspace = true
