[package]
name = "soldebug-output"
description = "Output formatting for soldebug (trace, JSON)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
soldebug-core = { path = "../soldebug-core" }

alloy-primitives.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
yansi.workspace = true
