[package]
name = "soldebug-output"
description = "Output formatting for soldebug (trace, JSON)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
soldebug-core = { path = "../soldebug-core" }

alloy-primitives.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
yansi.workspace = true
